Fix password change toggle position and visibility in dark theme

--- a/core/css/styles.scss
+++ b/core/css/styles.scss
@@ -290,7 +290,7 @@ label.infield {
 	position: absolute !important;
 	height: 20px;
 	width: 24px;
-	background-image: url('../img/actions/toggle.svg?v=1');
+	background-image: var(--icon-toggle-000);
 	background-repeat: no-repeat;
 	background-position: center;
 	opacity: .3;
@@ -312,8 +312,9 @@ label.infield {
 #personal-show + label {
 	display: block;
 	right: 0;
-	margin-top: -36px;
-    padding: 6px 4px;
+	margin-top: -41px;
+	margin-right: -6px;
+	padding: 22px;
 }
 
 /* Warnings and errors are the same */
@@ -741,11 +742,12 @@ code {
 			opacity: 1;
 		}
 	}
+
 	// keyboard focus
 	#picker-showgridview:focus + #picker-view-toggle {
 		opacity: 1;
 	}
-	
+
 	.actions.creatable {
 		flex-wrap: wrap;
 		padding: 0px;
@@ -759,14 +761,13 @@ code {
 		border-radius: var(--border-radius-pill);
 		position: absolute;
 		top: 4px;
-		
+
 		.icon.icon-add{
 			background-image: var(--icon-add-000);
 			background-size: 16px 16px;
-			max-height:36px;
-			width:36px;
-			margin:0px;
-			
+			max-height: 36px;
+			width: 36px;
+			margin: 0px;
 		}
 
 		a {
